--- a/language/english/help/candy.html
+++ b/language/english/help/candy.html
@@ -1,5 +1,6 @@
 <div id="help-template" class="outer">
-<h2 class="head">Help: Xoosla Candy</h2>
-<h4 class="odd">Description</h4>
-<p class="even">XooslaCandy allows a Xoops webmaster and designated users (Through group permissions) to use BBcode in a safe secure manner in a WYSIWYG editor.</p>
+    <h2 class="head">Help: Xoosla Candy</h2>
+    <h4 class="odd">Description</h4>
+    <p class="even">XooslaCandy allows a Xoops webmaster and designated users (Through group permissions) to use BBcode
+        in a safe secure manner in a WYSIWYG editor.</p>
 </div>
